--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         }
 
         #features {
+        background-color: white;
+        color: black;
         display: flex;
         justify-content: space-between; /* Centra horizontalmente */
         align-items: center; /* Centra verticalmente */
