--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     </div>
     <br>
     <div id="copyright">
-        <p>Copyrights &copy; 2023 All Rights Reserved by DescubreDo.</p>
+        <p>&copy; Descubre DO 2023 · Todos los derechos reservados.</p>
     </div>
     <script>
         const acordeones = document.querySelectorAll('.acordeon');
