--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
         #logo {
         width: 50%; /* Mantén el mismo ancho en pantallas más pequeñas */
         height: 50%; /* Permite que la altura se ajuste automáticamente */
+        margin-left: 0px;
         }
         #banner h1 {
         font-size: 2rem;
