--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
         #banner {
             position: relative;
             text-align: center;
+            max-width: 100%; /* Establece un ancho máximo */
         }
 
         #banner img {
             width: 100%;
-            height: 85vh; /* Reduzco la altura en un 30% */
+            height: auto; /* Permite que la imagen se ajuste proporcionalmente */
+            max-height: 85vh; /* Limita la altura máxima de la imagen */
         }
 
         #banner-overlay {
@@ -225,23 +227,21 @@
             max-width: 90%; /* Reduce el ancho máximo en pantallas más pequeñas */
             margin: 0 auto; /* Centra horizontalmente los acordeones */
         }
-         
         #logo {
         width: 50%; /* Mantén el mismo ancho en pantallas más pequeñas */
         height: 50%; /* Permite que la altura se ajuste automáticamente */
-        margin-left: 0px;
         }
         #banner h1 {
         font-size: 2rem;
-        }
+    }
 
-        #banner h2 {
-            font-size: 1.2rem;
-        }
+    #banner h2 {
+        font-size: 1.2rem;
+    }
 
-        #banner p {
-            font-size: 1.2rem;
-        }
+    #banner p {
+        font-size: 1.2rem;
+    }
     }
     </style>
 </head>
@@ -359,7 +359,7 @@
     </div>
     <br>
     <div id="copyright">
-        <p>&copy; Descubre DO 2023 · Todos los derechos reservados.</p>
+        <p>Copyrights &copy; 2023 All Rights Reserved by DescubreDo.</p>
     </div>
     <script>
         const acordeones = document.querySelectorAll('.acordeon');
