--- a/index.html
+++ b/index.html
@@ -229,7 +229,6 @@
         #logo {
         width: 50%; /* Mantén el mismo ancho en pantallas más pequeñas */
         height: 50%; /* Permite que la altura se ajuste automáticamente */
-        margin-left: 0px;
         }
         #banner h1 {
         font-size: 2rem;
@@ -359,7 +358,7 @@
     </div>
     <br>
     <div id="copyright">
-        <p>&copy; Descubre DO 2023 · Todos los derechos reservados.</p>
+        <p>Copyrights &copy; 2023 All Rights Reserved by DescubreDo.</p>
     </div>
     <script>
         const acordeones = document.querySelectorAll('.acordeon');
