--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         #banner img {
             width: 100%;
             height: 85vh; /* Reduzco la altura en un 30% */
+            max-height: 85vh; /* Limita la altura máxima de la imagen */
         }
 
         #banner-overlay {
@@ -358,7 +359,7 @@
     </div>
     <br>
     <div id="copyright">
-        <p>Copyrights &copy; 2023 All Rights Reserved by DescubreDo.</p>
+        <p>&copy; Descubre DO 2023 · Todos los derechos reservados.</p>
     </div>
     <script>
         const acordeones = document.querySelectorAll('.acordeon');
