--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <img src="img/Landingpage.png" alt="Main Image">
        <!-- <div id="banner-overlay"></div> Aquí agregamos el div de superposición -->
         <div id="banner-content">
-            <h1>¡Aquí inicia <span id="typed-word"></span>!</h1>
+            <h1>¡AQUÍ INICIA LA <span id="typed-word"></span>!</h1>
             <p>Descubre DO es tu boleto para explorar, disfrutar y crear recuerdos inolvidables en la República Dominicana. Miles de lugares, actividades y experiencias esperan por ti.</p>
             <h2><b>¿Listo para vivir una emocionante travesía?</b></h2>
             <div class="arrow-animation">
@@ -417,8 +417,8 @@
 
         // Texto a mostrar en el Typed.js
         const wordTexts = [
-            'la aventura',
-            'la emoción'
+            'AVENTURA',
+            'EMOCIÓN'
         ];
 
         // Configuración de Typed.js
