--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             <i class="far fa-envelope"></i> <span>hola@descubre.do</span>
         </div>
         <div class="copyright-item">
-            <i class="fab fa-instagram"></i> <a href="https://www.instagram.com/descubre.do/">descubre.do</a>
+            <i class="fab fa-instagram"></i> <a href="https://www.instagram.com/descubre.do/" target="_blank">descubre.do</a>
         </div>
     </div>
     <script>
