--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
                 <p>Conciertos, talleres, conferencias, festivales. Todo lo que viene próximamente y que no te puedes perder.</p>
             </div>
             <div class="tarjeta tarjeta-overlay">
-                <img src="img/Gastronomía.svg" alt="Eventos Icon" class="tarjeta-icon">
-                <h2>Gastronomía</h2>
+                <img src="img/Gastronomia.svg" alt="Eventos Icon" class="tarjeta-icon">
+                <h2>Gastronomia</h2>
                 <p>Lugares para disfrutar tu tipo de comida preferida, o para descubrir nuevos horizontes gastronómicos. ¡Atrévete a explorarlos!</p>
             </div>
             <div class="tarjeta tarjeta-overlay">
